kubernetes/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 15
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - frontend
                      - front
      containers:
        - name: frontend
          image: ----/frontend:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 2
          startupProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 2
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: default.conf
                path: default.conf
      imagePullSecrets:
        - name: regcreds
